Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-98437

QMediaPlayer does not emit destroyed signal

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.2.12, 6.5.6, 6.6.3, 6.7.0 RC, 6.8.0 FF
    • 5.15.2, 5.15.7, 6.7
    • Multimedia
    • None
    • Linux Mint 20
    • All
    • 7ddaf778a (dev), 9f0c777d7 (dev), 7909926e2 (6.7), c8be32616 (6.7), e84882fd2 (6.6), cfd430ba0 (6.6), b63248669 (tqtc/lts-6.5), 42c90cbe7 (tqtc/lts-6.5), 0b1c7e0f7 (tqtc/lts-6.2)

      When trying to destroy a QMediaPlayer, the destroyed signal is never called.

      This code shows the issue :

      #include <QCoreApplication>
      #include <QDebug>
      #include <QMediaPlayer>
      #include <QTimer>
      
      int main(int argc, char ** argv){
          QCoreApplication a(argc, argv);
          QMediaPlayer* mp  = new QMediaPlayer();
          a.connect(mp,&QMediaPlayer::destroyed,&a,[&](){
              qDebug() << "Deleted";
          });
          mp->deleteLater();
          a.exec();
      }

      I can't see anything about this issue in the documentation.

        For Gerrit Dashboard: QTBUG-98437
        # Subject Branch Project Status CR V

            artemiy Artem Dyomin
            mikaeld Mikael Desharnais
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: