Fix emitting QObject::destroyed upon deleting of QMediaPlayer

QObject::disconnect() has been replaced with blocking of signals in
the body of the destructor.

Fixes: QTBUG-98437
Pick-to: 5.15
Change-Id: Ifb3bcecea1cc1c53dde897a97bf540051dc449b4
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
Reviewed-by: Lars Sutterud <lars.sutterud@qt.io>
(cherry picked from commit 7ddaf778abcec8774e72ed9cc9db5c5c0a5397ba)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 7909926e2eb92fdd996db321a3388b67552fe28c)
(cherry picked from commit e84882fd26a5cfdcd58b0ab375f32e1eab598548)
(cherry picked from commit b6324866977a258f86110fa4bad7c6924500e70f)